--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "expmanager",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "https://kumarjaikishan.github.io/newExpManager",
+  "private": false,
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -18,6 +19,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
