--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "expmanager",
   "version": "0.1.0",
-  "homepage": "https://kumarjaikishan.github.io/newExpManager",
   "private": false,
+  "proxy":"http://localhost:5000/",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
