--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
-    "mongoose": "^6.8.1"
+    "mongoose": "^6.8.1",
+    "node-cron": "^3.0.2"
   }
 }
